[metadata]
author = Konstantin Baierer
author_email = unixprog@gmail.com
license = Apache License 2.0
description = OCR-D framework
url = https://github.com/OCR-D/core
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True
python_requires = >=3.7

[options.packages.find]
exclude = tests; docs

[options.entry_points]
console_scripts =
    ocrd=ocrd.cli:cli
    ocrd-dummy=ocrd.processor.builtin.dummy_processor:cli
