[metadata]
author = Konstantin Baierer
author_email = unixprog@gmail.com
license = Apache License 2.0
description = OCR-D framework - data validators
keywords = OCR, OCR-D
url = https://github.com/OCR-D/core
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.package_data]
* = *.yml; *.xsd
